# void-migration

./: .gitignore  .pre-commit-config.yaml  404.html  CA_holes.py  README.md  build.spec  index.html  mkdocs.yml  objects.inv  plotter.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: black.yml  bundle-linux.yml  bundle-macos.yml  bundle-windows.yml  bundle.yml  main.yml
Trying_parallel/: void_migration.py
docs/: index.md  reference.md
json/: collapse.json5  collapse_bi.json5  collapse_cases.json5  defaults.json5  fill_empty_M_mono.json5  fill_empty_M_mono_bi.json5  fill_empty_M_mono_bi_fp.json5  fill_empty_M_mono_bi_rate.json5  fill_empty_M_mono_fbi.json5  fill_empty_mono_c_nu.json5  fill_emptying_Mono.json5  gui.json5  hopper.json5  hopper_emptying.json5  hopper_emptying_bi.json5  hopper_emptying_f10_bi.json5  hopper_emptying_mu0p1.json5  hopper_emptying_mu0p1_poly.json5  hopper_emptying_mu1.json5  hopper_emptying_mu1_poly.json5  inclined-plane-bidisperse.json5  temperature.json5  test_slope.json5  test_stress.json5
papers/Kinematic_SLM/: collapse_angles.json5  collapse_bi.json5  collapse_fill.json5  discretisation_error.py  mesh_dependency.json5  post_process_collapse_angles.py  post_process_collapse_fill.py
reference/: index.html
test/: slope_test.py  test_operators.py
void-migration/: __init__.py  plotter.py  void_migration.py
void_migration/: __init__.py  boundary.py  cycles.py  gui.py  initial.py  main.py  motion.py  operators.py  params.py  plotter.py  stress.py  thermal.py  void_migration.py
voidmigration/: plotter.ipynb
(+9 files in other folders)
