[project]
name = "void_migration"
version = "0.3"
requires-python = ">=3.11"
authors = [
  {name = "Benjy Marks", email = "benjy.marks@sydney.edu.au"},
  {name = "Shivakumar Athani", email = "shivakumar.athani@sydney.edu.au"}
]
description = "A heterarchical stochastic solver for the motion, segregation, mixing and crushing of granular media"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["granular", "void", "migration", "heterarchical", "stochastic"]
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "json5",
    "black",
    "flake8",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "markdown-include",
    "mkdocs-include-markdown-plugin",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ['py311']

[tool.setuptools]
packages = ["void_migration"]